--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>React App</title>
+    <title>Collin Hooper</title>
     <link href="https://fonts.cdnfonts.com/css/jane-austen" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/enigmatic" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/cumulus" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css">
+    <script src="https://kit.fontawesome.com/76284dfa06.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="root"></div>
