--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Collin Hooper</title>
+    <title>Collin Hooper, Developer</title>
     <link href="https://fonts.cdnfonts.com/css/jane-austen" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/enigmatic" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/cumulus" rel="stylesheet">
