--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Collin Hooper, Developer</title>
+    <link rel="icon" type="image/png" href="../favicon.ico" />
     <link href="https://fonts.cdnfonts.com/css/jane-austen" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/enigmatic" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/cumulus" rel="stylesheet">
